[package]
name = "olli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version="0.43.0"}
async-std = {version="1.10.0",features = ["attributes"]}
env_logger = "0.9.0"
futures = "0.3.21"
tokio = { version = "0.3", features = ["io-util", "io-std", "stream", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
